--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<!-- bloc-0- Header -->
 			<header class="bloc bgc-white l-bloc" id="bloc-0">
 				<div class="container bloc-sm">
-					<nav class="navbar row" aria-label="menu principal">
+					<nav class="navbar row" aria-label="main navigation">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de la Chouette agence, meilleure agence webesign de Lyon" class="new-logoHeight" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -64,7 +64,7 @@
 							<h1 class="text-center hero-bloc-text new-tc ">
 								La chouette agence
 							</h1>
-							<div class="text-center" aria-label="Bouton vers page contact">
+							<div class="text-center" aria-label="button">
 								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
@@ -76,14 +76,14 @@
 			<!-- bloc-2-services -->
 			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
-					<div class="row med-width-whitespace" aria-label="Nos services">
+					<div class="row med-width-whitespace">
 						<p class="col-sm-12 text-center h3">
 							La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 						</p>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
 						<div class="col-sm-4">
-							<div class="text-center" role="img" aria-label="Représentation d'une icone webdesign">
+							<div class="text-center" role="img" aria-label="img">
 								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h2 class="mg-md text-center">
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 					<div class="row tight-width-whitespace">
-						<blockquote class="text-center new-quote" aria-label="Citation d'un de nos clients">
+						<blockquote class="text-center new-quote" aria-label="presentation">
 							<p>
 								<span class="fa fa-xs fa-quote-left new-fa"></span>
 								La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.<span class="fa fa-xs fa-quote-right new-fa"></span>
@@ -132,7 +132,7 @@
 			<!-- bloc-3-what-i-do -->
 			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace black-background"  aria-label="Nos savoirs-faire">
+					<div class="row tight-width-whitespace black-background"  aria-label="presentation">
 						<div class="col-sm-12">
 							<p class="mg-md text-center new-pSize tc-white">
 								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
@@ -151,7 +151,7 @@
 
 			<!-- bloc-4-portfolio -->
 			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-				<div class="container bloc-lg"  aria-label="Nos réalisations">
+				<div class="container bloc-lg"  aria-label="presentation">
 					<div class="row tight-width-whitespace ">
 						<p class="statement-bloc-text ">
 							Nous travaillons avec beaucoup de clients, voici nos réalisations.
@@ -204,7 +204,7 @@
 			<!-- bloc-5-cta -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 				<div class="container bloc-lg">
-					<div class="row black-background tight-width-whitespace new-pos"  aria-label="Pour nous contacter">
+					<div class="row black-background tight-width-whitespace new-pos">
 						<h3 class="mg-md  text-center tc-white">
 						Notre entreprise web design basée à Lyon vous attend
 						</h3>
@@ -214,7 +214,7 @@
 						<h4 class="col-sm12 text-center tc-white">
 							Contactez notre équipe !
 						</h4>
-						<div class="col-sm-12 text-center" aria-label="Bouton vers page contact">
+						<div class="col-sm-12 text-center" aria-label="button">
 							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
@@ -233,7 +233,7 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="Notre twitter"><span class="fa fa-twitter icon-md new-black"></span></a>
+										<a class="social" href="index.html" aria-label="link"><span class="fa fa-twitter icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
@@ -243,12 +243,12 @@
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="Notre dribble"><span class="fa fa-dribbble icon-md new-black"></span></a>
+										<a class="social" href="index.html" aria-label="link"><span class="fa fa-dribbble icon-md new-black"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="Notre instagram"><span class="fa fa-instagram icon-md new-black"></span></a>
+										<a class="social" href="index.html" aria-label="link"><span class="fa fa-instagram icon-md new-black"></span></a>
 									</div>
 								</div>
 							</div>
